--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
 
     <section class="first">
-        <div class="texts">
+        <div class="texts grp-1">
             <h1>Enjoy on your TV.</h1>
             <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
         </div>
@@ -71,7 +71,7 @@
     </section>
 
     <section class="second">
-        <div class="texts">
+        <div class="texts grp-2">
             <h1>Download your shows to watch offline.</h1>
             <p>Save your favourites easily and always have something to watch.</p>
         </div>
@@ -89,7 +89,7 @@
     </section>
 
     <section class="third">
-        <div class="texts">
+        <div class="texts grp-1">
             <h1>Watch everywhere.</h1>
             <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
         </div>
@@ -100,7 +100,7 @@
     </section>
 
     <section class="fourth">
-        <div class="texts">
+        <div class="texts grp-2">
             <h1>Create profiles for children.</h1>
             <p>Send children on adventures with their favourite characters in a space made just for them—free with your membership.</p>
         </div>
